--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Card</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
            <li> <a href="https://linkedin.com/in/jeferson-guimaraes-b78628196" 
             target="_blank">Linkedin</a>
           </li>
-           <li> <a href="#"target="_blank">Meus-Projetos </a> 
+           <li> <a href="./project.html"target="_blank">Meus-Projetos </a> 
           </li>
          </ul>
 
