add Style alteraçao

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <div id="container">
          <div id="Avatar">
           <img src="https://github.com/jeferson-3.png"alt="Avatar">
-          <a href="">jeferson</a>
+          <a href="#">jeferson</a>
          </div>
          <div id="switch" onclick="toggleMode()">
           <button></button>
@@ -26,7 +26,7 @@
            <li> <a href="https://linkedin.com/in/jeferson-guimaraes-b78628196" 
             target="_blank">Linkedin</a>
           </li>
-           <li> <a href="./project.html"target="_blank">Meus-Projetos </a> 
+           <li> <a href="#"target="_blank">Meus-Projetos </a> 
           </li>
          </ul>
 
